[package]
name = "cdt"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry-predicates = "0.3.0"
itertools = "0.10.0"
ordered-float = "2.1.1"
rand = "0.8.3"
