[package]
name = "gui"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[features]
bundle-shaders = []

[dependencies]
step = { path = "../step", features = ["parallel"] }
triangulate = { path = "../triangulate", features = ["parallel"] }

bytemuck = { version = "1.5.1", features = ["derive"] }
clap = "2.33"
env_logger = "0.8.3"
itertools = "0.10.0"
nalgebra-glm = "0.13.0"
pollster = "0.2.4"
wgpu = "0.8.1"
winit = "0.24.0"
