[package]
name = "nurbs"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
nalgebra-glm = "0.13.0"
num-integer = "0.1"
ordered-float = "2.0"
smallvec = "1.6"
