[package]
name = "step"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.3"
cdt = { path = "../cdt" }

[dev-dependencies]
clap = "2.33"
