[package]
name = "step"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7.1"
fast-float = "0.2"
log = "0.4.14"
memchr = "2.4.0"
nom = "6.0"
rayon = {version = "1.5", optional = true }

[features]
parallel = ["rayon"]

[dev-dependencies]
clap = "2.33"
